# cytosegment

./: .gitattributes  .gitignore  CHANGELOG  Data_preparation_sanity_check.ipynb  README.md  job_handler.py  main.py  main_with_params.py  main_without_params.py  pyproject.toml  setup.py  train.py  train_hpc.sh  training_notebook.ipynb
cytosegment/: divided_group_inference.py  early_stopping.py  helper_functions.py  ml_criterions.py  ml_dataset.py  ml_inferece.py  ml_metrics.py  ml_optimizers.py  ml_schedulers.py  ml_trainer.py  tools.py
models/: new_mnet_minmax.pth
notebooks/: Data_preparation_sanity_check.ipynb  hyperparameter_check.ipynb  training_notebook.ipynb
params/: train_params_unet.yaml  unet_params.yaml
semanticsegmenter/: __main__.py  ml_criterions.py  ml_dataset.py  ml_inferece.py  ml_metrics.py  ml_schedulers.py  new_unet.py
semanticsegmentor/: divided_group_inference.py  ml_dataset.py  ml_inferece.py  ml_metrics.py  ml_models.py  ml_trainer.py
slurm_template/: train_hpc.sh
src/: .gitignore  main.py
tests/: helper_methods.py  requirements.txt  test_criterions.py  test_metrics.py  test_model.py  test_models.py  test_train_pipeline.py  test_training_pipeline.py
unet/: __main__.py  criterion.py  dataset.py  dataset_utils.py  early_stop_cb.py  inferencer.py  json_iterpolate.py  json_to_hdf5.py  labelme_utils.py  metrics.py  ml_criterions.py  ml_dataset.py  ml_dataset_old.py  ml_inferece.py  ml_metrics.py  ml_models.py  ml_optimizers.py  ml_schedulers.py  ml_trainer.py  models.py  rtdc_to_json.py  slurm_handler.py  trainer.py  utils.py
(+63 files in other folders)
